<resources>
    <string name="app_name">Proyecto</string>
    <string name="conecta_ceti">ConectaCETI</string>
    <string name="usuario">Usuario</string>
    <string name="contrase_a">Contraseña</string>
    <string name="iniciar_sesi_n">Iniciar Sesión</string>
    <string name="fecha">fecha</string>
    <string name="hora">hora</string>
    <string name="edad">Edad</string>
    <string name="registrar">Registrar</string>
    <string name="ver">ver</string>
    <string name="Inicio">Inicio</string>
    <string-array name="tipos">
        <item>Estudiante</item>
        <item>Maestro</item>
        <item>Administrativo</item>
    </string-array>
    <string-array name="generos">
        <item>Mujer</item>
        <item>Hombre</item>
    </string-array>

</resources>