<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:background="#1188B3"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CambiarContraseña"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginHorizontal="60dp"
        android:text="@string/conecta_ceti"
        android:textColor="@color/white"
        android:textSize="40sp" />
    <EditText
        android:id="@+id/user"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/usuario"
        android:textSize="30sp"
        android:inputType="text"
        android:layout_marginTop="150dp"
        android:layout_gravity="center"
        />
    <EditText
        android:id="@+id/contrasena"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/contrase_a"
        android:textSize="30sp"
        android:layout_gravity="center"
        android:inputType="textPassword"
        />

    <Button
        android:id="@+id/btnCambiarContrasena"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25sp"
        android:text="Cambiar Contraseña"
        android:textSize="25sp"
        android:backgroundTint="#8C115A"
        android:layout_gravity="center"
        android:textColor="#ffffff"/>


</LinearLayout>