<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="#1188B3">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".Registro"
        android:orientation="vertical">
        <include
            android:id="@+id/toolbar"
            layout="@layout/toolbar" />
        <!-- Campo Nombre -->
        <EditText
            android:id="@+id/etName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Nombre"
            android:inputType="text"
            android:textSize="25sp"
            android:layout_marginBottom="16dp" />


        <EditText
            android:id="@+id/etPhone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Teléfono"
            android:inputType="phone"
            android:textSize="25sp"
            android:layout_marginBottom="16dp" />

        <EditText
            android:id="@+id/fecha"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:focusable="false"
            android:hint="@string/fecha"
            android:textSize="25sp"
            android:clickable="true"
            />
        <EditText
            android:id="@+id/hora"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/hora"
            android:textSize="25sp"
            android:clickable="true"
            android:focusable="false"
            />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Tipo"
                android:textSize="25sp"
                android:layout_marginEnd="220sp"/>
            <Spinner
                android:id="@+id/spinnerType"
                android:layout_width="wrap_content"
                android:textSize="25sp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp" />
        </LinearLayout>


        <EditText
            android:id="@+id/etAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Dirección"
            android:textSize="25sp"
            android:inputType="text"
            android:layout_marginBottom="16dp" />


        <EditText
            android:id="@+id/etEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Correo electrónico"
            android:textSize="25sp"
            android:inputType="textEmailAddress"
            android:layout_marginBottom="16dp" />


        <EditText
            android:id="@+id/etAge"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/edad"
            android:textSize="25sp"
            android:inputType="number"
            android:layout_marginBottom="16dp" />

       <RadioGroup
           android:id="@+id/botongenero"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:orientation="horizontal">
           <RadioButton
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:text="Mujer"
               />
           <RadioButton
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:text="Hombre"
               />
       </RadioGroup>


        <EditText
            android:id="@+id/etDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Descripción"
            android:textSize="25sp"
            android:inputType="text"
            android:layout_marginBottom="24dp" />


        <Button
            android:id="@+id/btnRegistrar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/registrar"
            android:backgroundTint="#8C115A"
            android:textColor="#ffffff" />

    </LinearLayout>
</ScrollView>
